メッセージ設定時、対象が0人の場合のバリデーションを設定する

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,6 +11,7 @@ ja:
       push_timing:
         time: 時刻
         in_x_days: ○日後
+        time_now: 現在
   errors:
     format: "%{attribute}%{message}"
     messages:
